# relax-code

./: .gitignore  AGENTS.md  Cargo.toml
.github/workflows/: build-artifacts.yml
crates/relax-cli/: Cargo.toml
crates/relax-cli/src/: main.rs
crates/relax-cli/tests/: help_command.rs  resume_command.rs
crates/relax-core/: Cargo.toml
crates/relax-core/src/: agent_loop.rs  lib.rs  message.rs  session.rs
crates/relax-core/tests/: agent_loop_executes_tool.rs  agent_loop_stops_on_text.rs
crates/relax-providers/: Cargo.toml
crates/relax-providers/src/: lib.rs  openai_compatible.rs  provider.rs
crates/relax-providers/tests/: response_parsing.rs
crates/relax-runtime/: Cargo.toml
crates/relax-runtime/src/: config.rs  lib.rs  paths.rs  session_store.rs  skill_loader.rs
crates/relax-runtime/tests/: config_defaults.rs  session_roundtrip.rs  skill_loader.rs
crates/relax-runtime/tests/fixtures/skills/example/: SKILL.md
crates/relax-tools/: Cargo.toml
crates/relax-tools/src/: lib.rs  registry.rs  tool.rs
crates/relax-tools/src/builtin/: read_file.rs  shell.rs  update_plan.rs  write_file.rs
crates/relax-tools/tests/: registry_dispatch.rs
docs/architecture/: agent-loop.md  prompt-and-skills.md  session-state.md  tool-system.md
docs/plans/: 2026-03-06-build-artifacts-workflow-design.md  2026-03-06-build-artifacts-workflow.md  2026-03-06-relax-code-agent-design.md  2026-03-06-relax-code-agent-implementation.md
