[package]
name = "relax-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "relax"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
relax-core = { path = "../relax-core" }
relax-runtime = { path = "../relax-runtime" }

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
